# pretty-bib

./: README.md  pyproject.toml
prettybib/: log.py  main.py  resolvers.py  snowball.py  util.py
test/: .gitignore
